Iterazione 2
Eliminazione Punto di Interesse & modifiche minori